K8s/ingress.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: secure-route
  namespace: default
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`dash.traefik-challenge.cc`) && PathPrefix(`/dashboard`)
      kind: Rule
      services:
        - name: traefik-dashboard-service
          port: 8080
      middlewares:
        - name: test-auth
    - match: Host(`dash.traefik-challenge.cc`) && PathPrefix(`/api`)
      kind: Rule
      services:
        - name: traefik-dashboard-service
          port: 8080
      middlewares:
        - name: test-auth
    - match: Host(`whoamius.traefik-challenge.cc`)
      kind: Rule
      services:
        - name: whoami
          port: 80
      middlewares:
        - name: test-auth
    - match: Host(`whoami.traefik-challenge.cc`)
      kind: Rule
      services:
        - name: whoami
          port: 80
      middlewares:
        - name: test-auth
  tls:
    certResolver: traefik-le
